--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,17 +1,14 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
 name: Go
-
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
 jobs:
 
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -21,9 +18,6 @@ jobs:
       with:
         go-version: 1.19
 
-    - name: Build
-      run: go build -v main.go
-    
     - name: Build-DB
       run: docker-compose build
       
@@ -32,3 +26,12 @@ jobs:
 
     - name: Test
       run: go test -v main_test.go
+      
+      
+  build:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Build
+        run: go build -v main.go
